--- a/Assets/packages.config
+++ b/Assets/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.NETCore.Platforms" version="1.1.0" />
   <package id="NAudio" version="2.2.1" />
   <package id="NAudio.Asio" version="2.2.1" />
   <package id="NAudio.Core" version="2.2.1" />
@@ -7,5 +8,7 @@
   <package id="NAudio.Wasapi" version="2.2.1" />
   <package id="NAudio.WinForms" version="2.2.1" />
   <package id="NAudio.WinMM" version="2.2.1" />
+  <package id="NETStandard.Library" version="1.6.1" />
+  <package id="Sandwych.GeographicLib" version="1.49.3" />
   <package id="WebSocketSharp-netstandard" version="1.0.1" />
 </packages>
